PRODUCTION READY: Added security, monitoring, and scalability features for 10K users

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -623,6 +623,7 @@
         </div>
     </div>
 
+    <script src="secure-storage.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
