Clean up codebase: Remove all emojis and debug logs for production
- Remove all emojis from Chrome extension files
- Remove all emojis from backend Python files
- Clean up debug logs and keep only essential error logging
- Remove unwanted console.log statements with emojis
- Maintain functionality while improving code professionalism
- Ready for production deployment

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -20,7 +20,7 @@
             border-radius: 16px;
             overflow: hidden;
             position: relative;
-            border: 1px solid #3A3A3C;
+            border: none;
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
         }
         .container {
@@ -31,6 +31,7 @@
             border-radius: 16px;
             background: #1C1C1E;
             overflow: hidden;
+            border: none;
         }
         /* Header Section */
         .header {
@@ -566,7 +567,7 @@
         <!-- Auth Section (shown when not logged in) -->
         <div id="auth-section" class="auth-section">
             <div class="auth-message">
-                Sign in to start improving your prompts with promptgrammerly
+                Sign in to start prompting with promptgrammerly
             </div>
             <button id="login-btn" class="login-btn">
                 <span id="login-text">Sign in with Google</span>
@@ -589,9 +590,9 @@
             </div>
             <div class="payment-body">
                 <div class="payment-features">
-                    <div class="feature">✅ Unlimited prompt enhancements</div>
-                    <div class="feature">✅ No daily limits</div>
-                    <div class="feature">✅ Priority support</div>
+                    <div class="feature"> Unlimited prompt enhancements</div>
+                    <div class="feature"> No daily limits</div>
+                    <div class="feature"> Priority support</div>
                 </div>
                 <div class="price-section">
                     <div class="price">$5<span class="period">/month</span></div>
