--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -562,7 +562,7 @@
         <!-- Auth Section (shown when not logged in) -->
         <div id="auth-section" class="auth-section">
             <div class="auth-message">
-                Sign in to start prompting with promptgrammerly
+                Sign in to start using PromptGrammerly.
             </div>
             <button id="login-btn" class="login-btn">
                 <span id="login-text">Sign in with Google</span>
